# LeXkit-OS

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  pyproject.toml
.pytest_cache/v/cache/: nodeids
lexkit/: __init__.py  errors.py  logging.py
lexkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lexkit/analysis/: __init__.py  minhash.py  tokenizer.py  vectors.py
lexkit/cli/: __init__.py  main.py
lexkit/config/: settings.py
lexkit/core/: __init__.py  processor.py  scanner.py
lexkit/db/: store.py
lexkit/gui/: __init__.py  __main__.py  app.py  output_capture.py  theme.py  workers.py
lexkit/gui/widgets/: dashboard.py  log_panel.py  tool_panels.py
lexkit/gui/widgets/results/: __init__.py  graph_view.py  table_views.py
lexkit/llm/: __init__.py  base.py  openai_compat.py  registry.py
lexkit/pipelines/: __init__.py  runner.py
lexkit/plugins/: __init__.py  base.py  loader.py  registry.py
lexkit/tools/: __init__.py  batch.py  cite.py  clean.py  fsm.py  notes.py  refs.py  search.py  split.py  tpl.py
lexkit/utils/: formatting.py  metadata.py
pytest_cache/v/cache/: nodeids
tests/: __init__.py  test_cite.py  test_clean.py  test_db.py  test_errors.py  test_fsm.py  test_gui_app.py  test_gui_capture.py  test_gui_capture_ext.py  test_gui_cli.py  test_gui_extended.py  test_gui_graph.py  test_gui_launch.py  test_gui_theme.py  test_gui_workers.py  test_llm.py  test_logging.py  test_minhash.py  test_nlp_tokenizer.py  test_nlp_vectors.py  test_notes.py  test_plugins.py  test_refs.py  test_tpl.py
